# phase-portrait-lab

./: LICENSE  README.md  pyproject.toml
assets/: chemistry-horizon-convergence.csv  pendulum-nonlinear-saddle.csv
notebooks/: brusselator_parameter_atlas.ipynb  chemistry_horizon_convergence.ipynb  chemistry_local_to_global.ipynb  local_linearization_and_hopf.ipynb  pendulum_nonlinear_saddle.ipynb  phase_portrait_tour.ipynb
phaseportraitlab/: __init__.py  analysis.py  brusselator_atlas.py  brusselator_sweep.py  chemistry_comparison.py  chemistry_horizon_compare.py  chemistry_local_global.py  cli.py  gallery.py  integrate.py  nonlinear_saddle.py  selkov_atlas.py  svg.py  systems.py
reports/: brusselator-hopf-sweep.md  brusselator-parameter-atlas.md  chemical-oscillator-comparison.md  chemistry-horizon-convergence.md  chemistry-local-to-global.md  pendulum-nonlinear-saddle.md  selkov-parameter-atlas.md
scripts/: generate_gallery.py
tests/: test_systems.py
