[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phase-portrait-lab"
version = "0.1.0"
description = "Tiny planar dynamical-systems lab with generated SVG phase portraits"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "AloJarbas"}]
keywords = ["dynamical-systems", "ode", "phase-portrait", "svg", "math"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Mathematics"
]

[project.scripts]
phase-portrait-report = "phaseportraitlab.cli:main"

[tool.setuptools.packages.find]
include = ["phaseportraitlab*"]
